<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndDevUI</string>

    <string-array name="ui_array">
        <item>主页</item>
        <item>收藏</item>
        <item>离线</item>
        <item>设置</item>
        <item>关于</item>
        <item>支持</item>
    </string-array>

    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="left_drawer_no_login_tip">登录后，将推荐给你更多感兴趣的内容</string>
    <string name="left_drawer_item_search">搜索</string>
    <string name="left_drawer_item_favorite">收藏</string>
    <string name="left_drawer_item_message">推荐</string>
    <string name="left_drawer_item_offline">离线</string>
    <string name="left_drawer_item_offline_cancel">取消离线</string>
    <string name="left_drawer_item_activity">活动</string>
    <string name="left_drawer_item_setting">设置</string>
    <string name="left_drawer_item_feedback">关于</string>
    <string name="left_drawer_item_appstore">支持</string>
    <string name="drawer_right_logout_hint_text">"登录后 可关注好友评论和收藏"</string>
    <string name="drawer_right_tip_no_login">未登录</string>
    <string name="ss_pattern_update">发现%1$d条更新</string>
    <string name="ss_have_a_rest">暂无更新, 休息一会儿</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_day_mode">日间模式</string>
    <string name="setting_list_mode">列表显示摘要</string>
    <string name="setting_font_size">字体大小</string>
    <string name="setting_list_comment">列表页评论</string>
    <string name="setting_refresh_list">列表页刷新</string>
    <string name="setting_load_image">2G/3G网络流量</string>
    <string name="setting_notify">推送通知</string>
    <string name="setting_interactive">互动插件</string>
    <string name="setting_share_when_favor">收藏时转发</string>
    <string name="setting_share_when_diggbury">顶踩时转发</string>
    <string name="setting_clear">清理缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_recommend">精彩应用推荐</string>
    <string name="setting_update">检查新版本</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_use_swipe">左右翻页</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_close_shake_hand">关闭摇一摇切换夜间模式</string>
    <string name="setting_use_help">使用帮助</string>
    <string name="app_copyright">© AndevUI </string>
    <string name="favorite_btn_delete">删除</string>
    <string name="favorite_btn_edit">编辑</string>
    <string name="favorite_btn_cancel">取消</string>
    <string name="dislike_dlg_lable_speech">读文章</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="email">邮箱</string>
    <string name="email_error">填写错误</string>
    <string name="email_details">邮箱将作为您的登陆账号</string>
    <string name="password">密码</string>
    <string name="password_error">填写错误</string>
    <string name="password_details">请正确填写您的密码</string>
    <string name="tel">手机号</string>
    <string name="tel_error">空或者不是11位数字 </string>
    <string name="tel_details">可以使用手机号作为您的登陆账户</string>
    <string name="login_email_tel">邮箱/手机</string>
    <string name="login_email_details">邮箱/手机将作为您的登陆账号</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="install_fail_file_not_exist">安装文件已不存在</string>
    <string name="download_remain_bytes">剩余%1$s%2$s</string>
    <string name="check_network">正在检测网络</string>

</resources>